--- a/README
+++ b/README
@@ -18,6 +18,7 @@ TODO
 
 - [x] Build all packages
 - [x] Add runit services for containerd
+- [ ] Actually run dockerd
 - [ ] Add runit services for dockerd
 - [ ] ???
 
